--- a/js/weyland.html
+++ b/js/weyland.html
@@ -13,6 +13,9 @@
             #code {
                 width: 60%;
             }
+            body {
+                font-family: 'Fira Sans', sans-serif;
+            }
             pre {
                 margin: 1em;
                 border: 1px solid darkgray;
@@ -24,6 +27,7 @@
     </head>
     <body>
         <div id="main">
+            <h1>Enter Regex</h1>
             <input type="text" id="code" name="code" placeholder="Code..." onsubmit="react()">
             <input type="submit" hidden />
             <pre id="output"> </pre>
