Weyland JS Element return.

--- a/js/weyland.html
+++ b/js/weyland.html
@@ -23,6 +23,9 @@
                 font-family: 'Fira Sans', sans-serif;
                 padding: 1em;
             }
+            td {
+                border-right: 1px solid black;
+            }
         </style>
     </head>
     <body>
@@ -32,5 +35,9 @@
             <input type="submit" hidden />
             <pre id="output"> </pre>
         </div>
+        <table>
+            <tr>
+                <td><div id="ana1"></div></td><td><div id="ana2"></div></td><td><div id="ana3"></div></td>
+            </tr>
     </body>
 </html>
