Welyand JS Inverted Custom Classes + title

--- a/js/weyland.html
+++ b/js/weyland.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Weyland JS</title>
         <meta charset="utf8">
         <script type="text/javascript" src="weyland.js"></script>
         <script>
