[JS] match return now -X, 0 or +X

--- a/js/weyland.html
+++ b/js/weyland.html
@@ -11,6 +11,9 @@
             div {
                 text-align: center;
             }
+            #ana1, #ana2, #ana3 {
+                text-align: left;
+            }
             input {
                 width: 60%;
             }
