Quantifiers, greedy and lazy v1

--- a/js/weyland.html
+++ b/js/weyland.html
@@ -53,7 +53,7 @@
         </div>
         <table>
             <tr>
-                <td><div id="res1"></div></td>
+                <td><div id="res1"></div></td><td><div id="res2"></div></td>
             </tr>
         </table>
     </body>
