Weyland working again with HTML

--- a/js/weyland.html
+++ b/js/weyland.html
@@ -2,8 +2,153 @@
     <head>
         <title>Weyland JS</title>
         <meta charset="utf8">
-        <script type="text/javascript" src="weyland.js"></script>
-        <script>
+        <script type="module" src="./weyland.mjs"></script>
+        <script type="module">
+            import { Regex, Sequence, Class, Special } from "./weyland.mjs";
+
+            //-----------------------------------------------------------------------------
+            // Fonctions de démarrage et de réaction
+            //-----------------------------------------------------------------------------
+
+            /* Fonctions de démarrage */
+
+            let regex = null;
+            let last_text = null;
+
+            function start()
+            {
+                console.log("hllo");
+                let regex = document.getElementById('regex');
+                regex.addEventListener("keypress",
+                    function (event)
+                    {
+                        if (event.code === "Enter")
+                        {
+                            react('regex');
+                        }
+                    }
+                );
+                regex.value = '';
+                let text = document.getElementById('text');
+                text.addEventListener("keypress",
+                    function (event)
+                    {
+                        if (event.code === "Enter")
+                        {
+                            react('text');
+                        }
+                    }
+                );
+                text.value = '';
+            }
+
+            function explore(tree, regex)
+            {
+                let child = document.createElement('li');
+                child.innerText = regex.toString();
+                if (regex instanceof Regex)
+                {
+                    if (regex.elements.length > 0)
+                    {
+                        let subtree = document.createElement('ol');
+                        for (let e of regex.elements)
+                        {
+                            explore(subtree, e);
+                        }
+                        child.appendChild(subtree);
+                    }
+                } else if (regex instanceof Class) {
+                    if (regex.value === Class.Custom)
+                    {
+                        let subtree = document.createElement('ol');
+                        for (let e of regex.elements)
+                        {
+                            explore(subtree, e);
+                        }
+                        child.appendChild(subtree);
+                    }
+                } else if (regex instanceof Element) {
+                    // pass
+                }
+                tree.appendChild(child);
+            }
+
+            function react(type)
+            {
+                console.clear();
+
+                let regex = null;
+
+                // Clean
+                let ana1 = document.getElementById('ana1');
+                ana1.innerHTML = "";
+                let ana2 = document.getElementById('ana2');
+                ana2.innerHTML = "";
+                let res1 = document.getElementById('res1');
+                res1.innerHTML = "";
+                let res2 = document.getElementById('res2');
+                res2.innerHTML = "";
+
+                // Get info
+                let pattern = document.getElementById('regex').value.trim();
+                let text = document.getElementById('text').value.trim();
+
+                if (pattern !== "")
+                {
+                    let output = document.getElementById('compile');
+                    output.setAttribute('style', 'display: block');
+
+                    regex = new Regex(pattern, false);
+
+                    // Get Chars
+                    let chars = regex.precompile();
+                    let list = document.createElement('ol');
+                    for (let i = 0; i < chars.length; i++)
+                    {
+                        let e = document.createElement('li');
+                        e.innerText = chars[i].toString();
+                        list.appendChild(e);
+                    }
+                    ana1.appendChild(list);
+                    // Get Regex
+                    regex.compile();
+                    let tree = document.createElement('ul');
+                    explore(tree, regex.root);
+                    ana2.appendChild(tree);
+                }
+
+                if (text !== "")
+                {
+                    if (type === "text" && regex === null)
+                    {
+                        alert("No regex defined. Please, define a regex first.");
+                        return;
+                    }
+
+                    let output = document.getElementById('match');
+                    output.setAttribute('style', 'display: block');
+
+                    let result = regex.match(text);
+                    if (result === null || result === undefined)
+                    {
+                        res1.innerText = "No result.";
+                    }
+                    else
+                    {
+                        res1.innerText = result.toString();
+
+                        let list = document.createElement('ol');
+                        for (let i = 0; i < result.getNbElementMatched(); i++)
+                        {
+                            let e = document.createElement('li');
+                            e.innerText = result.get(i).toString();
+                            list.appendChild(e);
+                        }
+                        res2.appendChild(list);
+                    }
+                }
+            }
+
             window.onload = start;
         </script>
         <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
