Start of server JS for weyland + correction html

--- a/js/weyland.html
+++ b/js/weyland.html
@@ -4,7 +4,7 @@
         <meta charset="utf8">
         <script type="module" src="./weyland.mjs"></script>
         <script type="module">
-            import { Regex, Sequence, Class, Special } from "./weyland.mjs";
+            import { Regex, Group, Class, Special } from "./weyland.mjs";
 
             //-----------------------------------------------------------------------------
             // Fonctions de démarrage et de réaction
