--- a/js/weyland_server_test.html
+++ b/js/weyland_server_test.html
@@ -4,31 +4,34 @@
         <!-- Simple page pour envoyer en POST des requêtes au web service en JS du weyland_server -->
     </head>
     <body style="width: 100%;">
-    <form action="http://localhost:7000?method=lex" method="post" style="width: 400px; margin: auto; text-align: center;">
+    <form action="http://localhost:7000" method="post" style="width: 400px; margin: auto; text-align: center;">
         <fieldset>
             <legend>ID</legend>
             <input name="id" id="id" type="text">
         </fieldset>
         <fieldset>
-            <legend>Method</legend>
-            <select name="method" id="method">
-                <option value="regex">Regex</option>
-                <option value="lex" selected>Lexer</option>
-            </select>
-        </fieldset>
-        </fieldset>
-        <fieldset>
             <legend>Langage</legend>
             <select name="lang" id="lang">
-                <option value="lua">Lua</option>
+                <option value="json">JSON</option>
+                <option value="line">Lines</option>
+                <option value="lua" selected>Lua</option>
                 <option value="python">Python</option>
-                <option value="test" selected>Test</option>
+                <option value="test">Test</option>
             </select>
         </fieldset>
         <br>
         <fieldset>
-            <legend>Votre code</legend>
+            <legend>Texte</legend>
             <textarea id="text" name="text" rows="10" cols="40"></textarea>
+        </fieldset>
+        <br>
+        <fieldset>
+            <legend>Sortie</legend>
+            <select name="output" id="output">
+                <option value="json" selected>JSON</option>
+                <option value="html">HTML</option>
+                <option value="text">Text</option>
+            </select>
         </fieldset>
         <br>
         <input type="submit" value="Envoyer">
